# falkordb-rs-next-gen

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flow.sh  flow_tests_done.txt  flow_tests_todo.txt  graphblas.sh  lagraph.sh  redisearch.sh  tck_done.txt
.claude/: settings.json
.claude/skills/: build.md  flow.md  tck.md  test.md
.claude/skills/clippy/: skill.md
.claude/skills/coverage/: skill.md
.claude/skills/lint/: skill.md
.claude/skills/test/: skill.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: rust-pr-close.yml  rust-pr.yml  rust-push.yml
docs/: code_review_notes.md  profiling.md  query_visualizer.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_runtime.rs
graph/: Cargo.toml  build.rs
graph/src/: ast.rs  binder.rs  cypher.rs  entity_type.rs  index.rs  indexer.rs  lib.rs  optimizer.rs  planner.rs  string_escape.rs  threadpool.rs  tree.rs
graph/src/graph/: attribute_cache.rs  attribute_store.rs  block_vec.rs  cow.rs  graph.rs  matrix.rs  mod.rs  mvcc_graph.rs  tensor.rs  vector.rs  versioned_matrix.rs
graph/src/graph/graphblas/: lagraph_bindings.rs  lagraphx_bindings.rs  matrix.rs  mod.rs  tensor.rs  vector.rs  versioned_matrix.rs
graph/src/index/: indexer.rs  mod.rs  text_index_options.rs  vector_index_options.rs
graph/src/index/redisearch/: mod.rs  redis.rs
graph/src/parser/: ast.rs  cypher.rs  lexer.rs  macro.rs  mod.rs  string_escape.rs
graph/src/planner/: binder.rs  mod.rs  optimizer.rs
graph/src/planner/optimizer/: absorb_edge_filters_into_vlt.rs  eliminate_true_filters.rs  mod.rs  push_filters_down.rs  replace_cartesian_with_hash_join.rs  select_scan_node.rs  utilize_index.rs  utilize_node_by_id.rs
graph/src/redisearch/: mod.rs  redis.rs
graph/src/runtime/: batch.rs  bitset.rs  env.rs  eval.rs  expression_context.rs  functions.rs  iter.rs  mod.rs  ordermap.rs  orderset.rs  pending.rs  pool.rs  runtime.rs  value.rs  vectorized.rs
graph/src/runtime/functions/: aggregation.rs  algo_procedures.rs  conversion.rs  entity.rs  internal.rs  list.rs  math.rs  mod.rs  path.rs  procedures.rs  spatial.rs  string.rs  temporal.rs  trig.rs
graph/src/runtime/ops/: aggregate.rs  all_shortest_paths.rs  apply.rs  argument.rs  cartesian_product.rs  commit.rs  cond_traverse.rs  cond_var_len_traverse.rs  create.rs  delete.rs  distinct.rs  empty.rs  expand_into.rs  filter.rs  foreach.rs  limit.rs  load_csv.rs  merge.rs  mod.rs  node_by_fulltext_scan.rs  node_by_id_seek.rs  node_by_index_scan.rs  node_by_label_and_id_scan.rs  node_by_label_scan.rs  optional.rs  or_apply_multiplexer.rs  path_builder.rs  procedure_call.rs  project.rs  remove.rs  semi_apply.rs  set.rs  skip.rs  sort.rs  union.rs  unwind.rs  value_hash_join.rs
graph/src/udf/: js_classes.rs  js_context.rs  js_globals.rs  mod.rs  repository.rs  type_convert.rs
runtime-fuzz-target/src/: main.rs
src/: allocator.rs  config.rs  graph_core.rs  lib.rs  module_init.rs  redis_type.rs  reply.rs
src/commands/: config_cmd.rs  delete.rs  explain.rs  list.rs  memory.rs  mod.rs  query.rs  record.rs  ro_query.rs  udf.rs
tests/: common.py  record.py  requirements.txt  test_concurrency.py  test_e2e.py  test_functions.py  test_ldbc.py  test_mvcc.py
tests/flow/: base.py  common.py  index_utils.py  test_access_del_entity.py  test_acl.py  test_aggregation.py  test_all_shortest_paths.py  test_betweenness.py  test_bfs.py  test_bidirectional_traversals.py  test_bolt.py  test_bound_variables.py  test_bulk_insertion.py  test_cache.py  test_call_subquery.py  test_comprehension_functions.py  test_concurrent_query.py  test_config.py  test_create_clause.py  test_defrag.py  test_distinct.py  test_edge_index_scans.py  test_edge_index_updates.py  test_effects.py  test_empty_query.py  test_encode_decode.py  test_entity_update.py  test_execution_plan_print.py  test_expand_into.py  test_expiry.py  test_filters.py  test_foreach.py  test_fulltext_query.py  test_function_calls.py  test_graph_copy.py  test_graph_create.py  test_graph_deletion.py  test_graph_info.py  test_graph_merge.py  test_hashjoin.py  (+61 more)
tests/flow/imdb/: imdb_queries.py  imdb_utils.py
tests/flow/social/: social_queries.py  social_utils.py
tests/tck/falkor_utils/: assertions.py
tests/tck/features/clauses/with-where/: WithWhere1.feature  WithWhere2.feature  WithWhere7.feature
tests/tck/features/expressions/list/: List6.feature
tests/tck/features/expressions/literals/: Literals5.feature  Literals7.feature
tests/tck/features/steps/: Steps.py
