[workspace]
members = [
    "graph",
    "fuzz",
    "runtime-fuzz-target", ]

[package]
name = "falkordb-rs"
version = "0.1.0"
edition = "2024"
description = "Graph database"
license = "MIT"
repository = "https://github.com/FalkorDB/falkordb-rs-next-gen"
readme = "README.md"
keywords = ["graph", "database"]
categories = ["database"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "falkordb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph = { path = "graph", version = "0.1.0" }
lazy_static = "1.5.0"
redis-module = { git = "https://github.com/AviAvni/redismodule-rs", branch = "patches-redisearch" }
redis-module-macros = { git = "https://github.com/RedisLabsModules/redismodule-rs", tag = "v2.1.2" }
ryu = "1.0.20"
tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry = { version = "0", optional = true }
opentelemetry-zipkin = { version = "0", default-features = false, features = ["reqwest-blocking-client", "reqwest-rustls"], optional = true }
opentelemetry_sdk = { version = "0", optional = true }
orx-tree = "1.8.0"
tracing-opentelemetry = { git = 'https://github.com/BSteffaniak/tracing-opentelemetry.git', branch = 'upgrade-otel-to-0.30', optional = true }

[profile.release]
codegen-units = 1
lto = true
# debug = true
# strip = false

[features]
zipkin = ["opentelemetry", "opentelemetry-zipkin", "opentelemetry_sdk", "tracing-opentelemetry"]
fuzz = []
