[workspace]
members = [
    "graph",
    "fuzz",
    "runtime-fuzz-target", ]

[package]
name = "falkordb-rs"
version = "0.1.0"
edition = "2024"
description = "Graph database"
license = "MIT"
repository = "https://github.com/FalkorDB/falkordb-rs-next-gen"
readme = "README.md"
keywords = ["graph", "database"]
categories = ["database"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "falkordb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_refcell = "0.1.13"
graph = { path = "graph", version = "0.1.0" }
lazy_static = "1.5.0"
redis-module = { git = "https://github.com/AviAvni/redismodule-rs", branch = "patches-redisearch" }
redis-module-macros = { git = "https://github.com/RedisLabsModules/redismodule-rs", tag = "v2.1.2" }
ryu = "1.0.20"
orx-tree = "2.1.0"
pyroscope = { version = "0.5.8", optional = true }
pyroscope_pprofrs = { version = "0.2.10", optional = true }

[profile.release]
codegen-units = 1
lto = true
# debug = true
# strip = false

[features]
pyro = ["pyroscope", "pyroscope_pprofrs"]
fuzz = []
