[workspace]
members = [
    "graph",
    "fuzz",
    "runtime-fuzz-target", ]

[package]
name = "falkordb-rs"
version = "0.1.0"
edition = "2024"
description = "Graph database"
license = "MIT"
repository = "https://github.com/FalkorDB/falkordb-rs-next-gen"
readme = "README.md"
keywords = ["graph", "database"]
categories = ["database"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "falkordb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_refcell = "0.1.13"
crossfire = "3.1.5"
graph = { path = "graph", version = "0.1.0" }
lazy_static = "1.5.0"
parking_lot = "0.12"
redis-module = { git = "https://github.com/AviAvni/redismodule-rs", branch = "master" }
ryu = "1.0.23"
orx-tree = "2.2.0"
pyroscope = { version = "1.0.2", optional = true }
pyroscope_pprofrs = { version = "0.2.10", optional = true }

[build-dependencies]
redis-module-macros = { git = "https://github.com/AviAvni/redismodule-rs", branch = "master" }

[profile.release]
codegen-units = 1
lto = true
# debug = true
# strip = false

[features]
pyro = ["pyroscope", "pyroscope_pprofrs"]
fuzz = []
