[package]
name = "graph-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
libc = "0.2.182"

[dependencies.graph]
path = "../graph"

[[bin]]
name = "fuzz_target_runtime"
path = "fuzz_targets/fuzz_target_runtime.rs"
test = false
doc = false
bench = false