[package]
name = "graph"
version = "0.1.0"
edition = "2024"
description = "Core of the database"
license = "MIT"
repository = "https://github.com/FalkorDB/falkordb-rs-next-gen"
readme = "../README.md"
keywords = ["graph", "database"]
categories = ["data-structures", "database"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_refcell = "0.1.13"
csv = "1.4.0"
itertools = "0.14.0"
lru = "0.16.2"
num_cpus = "1.17.0"
once_cell = "1.21.3"
orx-tree = "2.1.0"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.12.26", default-features = false, features = ["blocking", "rustls-tls"] }
roaring = "0.11.2"
thin-vec = "0.2.14"
unescaper = "0.1.8"
