[package]
name = "graph"
version = "0.1.0"
edition = "2024"
description = "Core of the database"
license = "MIT"
repository = "https://github.com/FalkorDB/falkordb-rs-next-gen"
readme = "../README.md"
keywords = ["graph", "database"]
categories = ["data-structures", "database"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_refcell = "0.1.13"
chrono = "0.4.23"
csv = "1.4.0"
fjall = "3.0.2"
itertools = "0.14.0"
json-escape = "0.3.1"
lru = "0.16.3"
num_cpus = "1.17.0"
num_enum = "0.7.5"
once_cell = "1.21.3"
orx-tree = "2.2.0"
rand = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
roaring = "0.11.3"
thin-vec = "0.2.14"
